<resources>
    <string name="app_name">Automation app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="onoff">On/Off</string>
    <string name="favourites">Favourites</string>
    <string name="ficustech">Ficus Tech</string>
    <string name="contact">ficustec@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="new_sensor">New sensor</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="img_logo_splash">Ficus Tech logo</string>
    <string name="ip">IP server</string>
    <string name="port">Port</string>
    <string name="confirm">Confirm</string>
    <string name="name">Name</string>
    <string name="sensorPort">Port</string>
    <string name="create">Create</string>
    <string name="update">Update</string>

    <string name="trash">Trash</string>
    <string name="empty_name">You must write a name</string>
    <string name="empty_port">You must write a port</string>
    <string name="add_sensor_button">Add sensor button</string>
    <string name="connect_server_button">Connect server button</string>
    <string name="app_disconnected">App is not connected, verify the network</string>

    <!--server errors-->
    <string name="e1">Not found</string>
    <string name="e2">Missing parameter</string>
    <string name="e3">Success</string>
    <string name="e4">Error</string>
    <string name="e5">Key error</string>
    <string name="e6">No option</string>
    <string name="e7">Port already exist</string>
</resources>
